--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
         const res = await fetch("https://airtable-proxy-oyrb.vercel.app/api/submit", {
   method: "POST",
   headers: { "Content-Type": "application/json" },
-  body: JSON.stringify({ fields: payload.fields })
+  body: JSON.stringify(payload.fields)
 });
         const data = await res.json();
         const tbody = document.getElementById("realtime-body");
@@ -646,7 +646,7 @@
             {
               method: "POST",
               headers: { "Content-Type": "application/json" },
-              body: JSON.stringify({ fields: payload.fields })
+              body: JSON.stringify(payload.fields)
             }
           );
           if (res.ok) {
