--- a/index.html
+++ b/index.html
@@ -485,9 +485,13 @@
     async function fetchDataAirtable() {
       try {
         const res = await fetch("https://airtable-proxy-oyrb.vercel.app/api/submit", {
-  method: "POST",
-  headers: { "Content-Type": "application/json" },
-  body: JSON.stringify(payload.fields)
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({
+        table: "당일민족1",
+        action: "select",
+        maxRecords: 50
+      })
 });
         const data = await res.json();
         const tbody = document.getElementById("realtime-body");
