--- a/index.html
+++ b/index.html
@@ -387,15 +387,18 @@
 }
 .dangil-flip-seq {
   perspective: 1300px;
-  width: 350px;
-  height: 230px;
+  width: 100%;
+  max-width: 600px;
+  height: 340px;
   position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 .dangil-flip-page {
-  width: 350px; height: 230px;
+  width: 100%;
+  max-width: 600px;
+  height: 340px;
   background: #fff;
   border-radius: 16px;
   box-shadow: 0 8px 28px #0003;
@@ -415,7 +418,7 @@
 .dangil-flip-page img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: cover;  /* or object-fit: contain; */
   border-radius: 16px;
   display: block;
 }
@@ -426,6 +429,9 @@
 @keyframes dangilbookflip {
   from { transform: rotateY(0deg); opacity: 1; }
   to { transform: rotateY(-100deg); opacity: 0.3; }
+}
+@media (max-width: 800px) {
+  .dangil-flip-seq, .dangil-flip-page { max-width: 97vw; height: 30vw; min-height: 160px; }
 }
 </style>
 
